--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>uiCookies:Frame &mdash; Free Bootstrap Theme, Free HTML5 Template, Free Responsive Bootstrap Website Template</title>
-    <meta name="description" content="Free Bootstrap Theme by uicookies.com">
-    <meta name="keywords" content="Free website templates, Free bootstrap themes, Free template, Free bootstrap, Free website template">
+    <title>Олеся &mdash; Студия перманентного макияжа в г. Сумы</title>
+    <meta name="description" content="Олеся - Студия перманентного макияжа в г. Сумы ">
+    <meta name="keywords" content="Олеся, Сумы, студия, перманентный, макияж, татуаж, бровей, век, губ, наращивание, ресниц, волос">
     
     <link rel="stylesheet" href="css/styles-merged.css">
     <link rel="stylesheet" href="css/style.min.css">
@@ -28,28 +28,28 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html" title="uiCookies:Frame">Frame</a>
+          <a class="navbar-brand" href="tel:+380994457287" title="Звоните: Олеся +380 99 445 72 87">Олеся +380 99 445 72 87</a>
         </div>
 
         <div id="navbar-collapse" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="#" data-nav-section="home">Home</a></li>
-            <li><a href="#" data-nav-section="features">Features</a></li>
-            <li><a href="#" data-nav-section="pricing">Pricing</a></li>
-            <li><a href="#" data-nav-section="reviews">Reviews</a></li>
-            <li><a href="#" data-nav-section="contact">Contact</a></li>
+            <li class="active"><a href="#" data-nav-section="home">Главная</a></li>
+            <li><a href="#" data-nav-section="features">Услуги</a></li>
+            <li><a href="#" data-nav-section="pricing">Цены</a></li>
+            <li><a href="#" data-nav-section="reviews">Отзывы</a></li>
+            <li><a href="#" data-nav-section="contact">Контакты</a></li>
           </ul>
         </div>
       </div>
     </nav>
     
-    <section class="probootstrap-hero prohttp://localhost/probootstrap/frame/#featuresbootstrap-slant" style="background-image: url(img/image_1.jpg);" data-section="home" data-stellar-background-ratio="0.5">
+    <section class="probootstrap-hero probootstrap-slant" style="background-image: url(img/image_1.jpg);" data-section="home" data-stellar-background-ratio="0.5">
       <div class="container">
         <div class="row intro-text">
           <div class="col-md-8 col-md-offset-2 text-center">
-            <h1 class="probootstrap-heading probootstrap-animate">uicookies.com Creates High Quality Bootstrap Template For <em>Free</em></h1>
+            <h1 class="probootstrap-heading probootstrap-animate">Студия перманентного макияжа в г. Сумы</h1>
             <div class="probootstrap-subheading center">
-              <p class="probootstrap-animate"><a href="https://uicookies.com/" target="_blank" role="button" class="btn btn-primary">Get Them Now</a><a href="#features" class="btn btn-default smoothscroll" role="button">See Features</a></p>
+              <p class="probootstrap-animate"><a href="#features" class="btn btn-default smoothscroll" role="button">Наши услуги</a></p>
             </div>
           </div>
         </div>
