changed hero image, added .gitignore

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="tel:+380994457287" title="Звоните: Олеся +380 99 445 72 87">Олеся +380 99 445 72 87</a>
+          <a class="navbar-brand" href="tel:+380994457287" title="Звоните: Олеся +380 99 445 72 87">Олеся <small>+380 99 445 72 87</small></a>
         </div>
 
         <div id="navbar-collapse" class="navbar-collapse collapse">
@@ -47,9 +47,10 @@
       <div class="container">
         <div class="row intro-text">
           <div class="col-md-8 col-md-offset-2 text-center">
-            <h1 class="probootstrap-heading probootstrap-animate">Студия перманентного макияжа в г. Сумы</h1>
+            <h3 class="probootstrap-heading probootstrap-animate">Студия перманентного макияжа</h3>
+            <h5 class="probootstrap-heading probootstrap-animate">г. Сумы</h5>
             <div class="probootstrap-subheading center">
-              <p class="probootstrap-animate"><a href="#features" class="btn btn-default smoothscroll" role="button">Наши услуги</a></p>
+              <p class="probootstrap-animate"><a href="#features" class="btn btn-common smoothscroll" role="button">Наши услуги</a></p>
             </div>
           </div>
         </div>
