--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="Олеся, Сумы, студия, перманентный, макияж, татуаж, бровей, век, губ, наращивание, ресниц, волос">
     
     <link rel="stylesheet" href="css/styles-merged.css">
-    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="fonts/icomoon/style.css">
 
     <!--[if lt IE 9]>
@@ -50,7 +50,7 @@
             <h3 class="probootstrap-heading probootstrap-animate">Студия перманентного макияжа</h3>
             <h5 class="probootstrap-heading probootstrap-animate">г. Сумы</h5>
             <div class="probootstrap-subheading center">
-              <p class="probootstrap-animate"><a href="#features" class="btn btn-common smoothscroll" role="button">Наши услуги</a></p>
+              <p class="probootstrap-animate"><a href="#features" class="btn btn-default smoothscroll" role="button">Наши услуги</a></p>
             </div>
           </div>
         </div>
@@ -62,26 +62,23 @@
         <div class="row">
           <div class="col-md-4">
             <div class="probootstrap-service-item probootstrap-animate" data-animate-effect="fadeIn">
-              <span class="icon icon-phone3"></span>
-              <h2>Mobile Optimize</h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-              <p><a href="#" class="probootstrap-link">Learn More <i class="icon-chevron-right"></i></a></p>
+              <span class="icon icon-trophy3"></span>
+              <h2>Опытный мастер</h2>
+              <p>Опыт работы больше десяти лет. Все работы выполняются стерильными инструментами и материалами</p>
             </div>
           </div>
           <div class="col-md-4">
             <div class="probootstrap-service-item probootstrap-animate" data-animate-effect="fadeIn">
-              <span class="icon icon-wallet2"></span>
-              <h2>Increase Revenue</h2>
-              <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-              <p><a href="#" class="probootstrap-link">Learn More <i class="icon-chevron-right"></i></a></p>
+              <span class="icon icon-global"></span>
+              <h2>Только качественные материалы</h2>
+              <p>Препараты производства Италия, Израиль. Процедура татуажа выполняется пигментами США</p>
             </div>
           </div>
           <div class="col-md-4">
             <div class="probootstrap-service-item probootstrap-animate" data-animate-effect="fadeIn">
-              <span class="icon icon-lightbulb"></span>
-              <h2>Smart Idea</h2>
-              <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-              <p><a href="#" class="probootstrap-link">Learn More <i class="icon-chevron-right"></i></a></p>
+              <span class="icon icon-heart3"></span>
+              <h2>Без боли</h2>
+              <p>Безболезненность процедуры с лучшими анестетиками. Период заживления 1-3 дня.</p>
             </div>
           </div>
         </div>
@@ -92,8 +89,7 @@
       <div class="container">
         <div class="row text-center mb100">
           <div class="col-md-8 col-md-offset-2 probootstrap-section-heading">
-            <h2 class="mb30 text-black probootstrap-heading">Features</h2>
-            <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+            <h2 class="mb30 text-black probootstrap-heading">Услуги</h2>
           </div>
         </div>
         <!-- END row -->
@@ -102,12 +98,11 @@
             <p><img src="img/img_showcase_1.jpg" alt="Free Template by uicookies.com" class="img-responsive probootstrap-shadow"></p>
           </div>
           <div class="col-md-4 col-md-pull-1 probootstrap-section-heading">
-            <h3 class="text-primary probootstrap-heading-2">Big Benefits for Small Business</h3>
-            <p><p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p></p>
+            <h3 class="text-primary probootstrap-heading-2">Перманентный макияж</h3>
             <ul class="probootstrap-list">
-              <li class="probootstrap-check">Pointing has no control</li>
-              <li class="probootstrap-check">A small river named Duden flows</li>
-              <li class="probootstrap-check">Roasted parts of sentences fly into your mouth</li>
+              <li class="probootstrap-check">Татуаж бровей в различных техниках</li>
+              <li class="probootstrap-check">Татуаж век (межресничная стрелка)</li>
+              <li class="probootstrap-check">Татуаж губ</li>
             </ul>
           </div>
         </div>
@@ -115,16 +110,14 @@
         <div class="row mb100">
           <!-- <div class="col-md-8 col-md-pull-2"> -->
           <div class="col-md-8 col-md-push-5 probootstrap-animate">
-            <p><img src="img/img_showcase_2.jpg" alt="Free Template by uicookies.com" class="img-responsive probootstrap-shadow"></p>
+            <p><img src="img/img_showcase_1.jpg" alt="Free Template by uicookies.com" class="img-responsive probootstrap-shadow"></p>
           </div>
           <!-- <div class="col-md-4 col-md-pull-1"> -->
           <div class="col-md-4 col-md-pull-8 probootstrap-section-heading">
-            <h3 class="text-primary probootstrap-heading-2">How Frame is different</h3>
-            <p><p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p></p>
+            <h3 class="text-primary probootstrap-heading-2">Инъекции гиалуроновой кислоты</h3>
             <ul class="probootstrap-list">
-              <li class="probootstrap-check">Pointing has no control</li>
-              <li class="probootstrap-check">A small river named Duden flows</li>
-              <li class="probootstrap-check">Roasted parts of sentences fly into your mouth</li>
+              <li class="probootstrap-check">Устранение морщин, заломов</li>
+              <li class="probootstrap-check">Объем губ</li>
             </ul>
           </div>
         </div>
@@ -135,12 +128,10 @@
             <p><img src="img/img_showcase_1.jpg" alt="Free Template by uicookies.com" class="img-responsive probootstrap-shadow"></p>
           </div>
           <div class="col-md-4 col-md-pull-1 probootstrap-section-heading">
-            <h3 class="text-primary probootstrap-heading-2">All in One Place</h3>
-            <p><p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p></p>
+            <h3 class="text-primary probootstrap-heading-2">Наращивание</h3>
             <ul class="probootstrap-list">
-              <li class="probootstrap-check">Pointing has no control</li>
-              <li class="probootstrap-check">A small river named Duden flows</li>
-              <li class="probootstrap-check">Roasted parts of sentences fly into your mouth</li>
+              <li class="probootstrap-check">Наращивание ресниц</li>
+              <li class="probootstrap-check">Наращивание волос</li>
             </ul>
           </div>
         </div>
@@ -316,67 +307,6 @@
       </div>
     </section>
 
-    <section class="probootstrap-section">
-      <div class="container">
-         <div class="row text-center mb100">
-          <div class="col-md-8 col-md-offset-2 probootstrap-section-heading">
-            <h2 class="mb30 text-black probootstrap-heading">Try It Today</h2>
-            <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-            <p><a href="#" class="btn btn-primary">Get It Now</a></p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <div class="row">
-              <div class="col-md-12">
-                <p><img src="img/laptop_1.jpg" alt="Free Template by uicookies.com" class="img-responsive"></p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6">
-                <h4 class="text-black probootstrap-check-2"> What is Instant?</h4>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-
-                <h4 class="text-black probootstrap-check-2">How do I use the new features of Frame App?</h4>
-                <p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word "and" and the Little Blind Text should turn around and return to its own, safe country. </p>
-              </div>
-              <div class="col-md-6">
-                <h4 class="text-black probootstrap-check-2">Is this available to my country?</h4>
-                <p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt and made herself on the way.
-</p>
-
-                <h4 class="text-black probootstrap-check-2">I have technical problem who do I email?</h4>
-                <p>But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- END section -->
-
-    <section class="probootstrap-section probootstrap-cta">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-8 col-md-offset-2 text-center">
-            <h2 class="probootstrap-heading">Join With Over 100K Members</h2>
-            <p class="probootstrap-sub-heading">But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their.</p>
-            <p><a href="#" class="btn btn-black">Get Started</a></p>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- <section class"probootstrap-section probootstrap-cta">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6 col-md-offset-3">
-            <h2 class="probootstrap-heading">Join With Over 100K Members</h2>
-            <p class="probootstrap-sub-heading">But nothing the copy said could convince her and so it didn’t take long until a few insidious Copy Writers ambushed her, made her drunk with Longe and Parole and dragged her into their agency, where they abused her for their.</p>
-
-          </div>
-        </div>
-      </div>
-    </section> -->
     <!-- END section -->
     <section class="probootstrap-section probootstrap-bg-light" data-section="contact">
       <div class="container">
