hero image alignment

--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
       </div>
     </nav>
     
-    <section class="probootstrap-hero probootstrap-slant" style="background-image: url(img/image_1.jpg);" data-section="home" data-stellar-background-ratio="0.5">
+    <section class="probootstrap-hero probootstrap-slant" style="background-image: url(img/image_2.jpg);" data-section="home" data-stellar-background-ratio="0.5">
       <div class="container">
         <div class="row intro-text">
           <div class="col-md-8 col-md-offset-2 text-center">
             <h3 class="probootstrap-heading probootstrap-animate">Студия перманентного макияжа</h3>
             <h5 class="probootstrap-heading probootstrap-animate">г. Сумы</h5>
             <div class="probootstrap-subheading center">
-              <p class="probootstrap-animate"><a href="#features" class="btn btn-default smoothscroll" role="button">Наши услуги</a></p>
+              <p class="probootstrap-animate"><a href="#features" class="btn btn-common smoothscroll" role="button">Наши услуги</a></p>
             </div>
           </div>
         </div>
