all sections completed

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
       <div class="container">
         <div class="row intro-text">
           <div class="col-md-8 col-md-offset-2 text-center">
-            <h3 class="probootstrap-heading probootstrap-animate">Студия перманентного макияжа</h3>
-            <h5 class="probootstrap-heading probootstrap-animate">г. Сумы</h5>
+            <h1 class="probootstrap-heading probootstrap-animate">Студия перманентного макияжа</h1>
             <div class="probootstrap-subheading center">
+              <h2>г. Сумы</h2>
               <p class="probootstrap-animate"><a href="#features" class="btn btn-common smoothscroll" role="button">Наши услуги</a></p>
             </div>
           </div>
@@ -94,10 +94,10 @@
         </div>
         <!-- END row -->
         <div class="row mb100">
-          <div class="col-md-8 col-md-pull-2 probootstrap-animate">
+          <div class="col-md-8 probootstrap-animate">
             <p><img src="img/img_showcase_1.jpg" alt="Free Template by uicookies.com" class="img-responsive probootstrap-shadow"></p>
           </div>
-          <div class="col-md-4 col-md-pull-1 probootstrap-section-heading">
+          <div class="col-md-4 probootstrap-section-heading">
             <h3 class="text-primary probootstrap-heading-2">Перманентный макияж</h3>
             <ul class="probootstrap-list">
               <li class="probootstrap-check">Татуаж бровей в различных техниках</li>
@@ -109,7 +109,7 @@
         <!-- END row -->
         <div class="row mb100">
           <!-- <div class="col-md-8 col-md-pull-2"> -->
-          <div class="col-md-8 col-md-push-5 probootstrap-animate">
+          <div class="col-md-8 col-md-push-4 probootstrap-animate">
             <p><img src="img/img_showcase_1.jpg" alt="Free Template by uicookies.com" class="img-responsive probootstrap-shadow"></p>
           </div>
           <!-- <div class="col-md-4 col-md-pull-1"> -->
@@ -124,10 +124,10 @@
         <!-- END row -->
 
         <div class="row mb100">
-          <div class="col-md-8 col-md-pull-2 probootstrap-animate">
+          <div class="col-md-8 probootstrap-animate">
             <p><img src="img/img_showcase_1.jpg" alt="Free Template by uicookies.com" class="img-responsive probootstrap-shadow"></p>
           </div>
-          <div class="col-md-4 col-md-pull-1 probootstrap-section-heading">
+          <div class="col-md-4 probootstrap-section-heading">
             <h3 class="text-primary probootstrap-heading-2">Наращивание</h3>
             <ul class="probootstrap-list">
               <li class="probootstrap-check">Наращивание ресниц</li>
@@ -144,49 +144,38 @@
       <div class="container">
         <div class="row text-center mb100">
           <div class="col-md-8 col-md-offset-2 probootstrap-section-heading">
-            <h2 class="mb30 text-black probootstrap-heading">Choose the plan that’s right for your business </h2>
-            <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+            <h2 class="mb30 text-black probootstrap-heading">Цены</h2>
           </div>
         </div>
         <!-- END row -->
         <div class="row">
           <div class="col-md-4">
-            <div class="probootstrap-pricing">
-              <h2>Starter</h2>
-              <p class="probootstrap-price"><strong>$22.99</strong></p>
-              <p class="probootstrap-note">This is a monthly recurring payment.</p>
-              <ul class="probootstrap-list text-left mb50">
-                <li class="probootstrap-check">Pointing has no control</li>
-                <li class="probootstrap-check">A small river named Duden flows</li>
-                <li class="probootstrap-check">Roasted parts of sentences fly into your mouth</li>
-              </ul>
-              <p><a href="#" class="btn btn-black">Get Started</a></p>
-            </div>
-          </div>
-          <div class="col-md-4">
             <div class="probootstrap-pricing probootstrap-popular probootstrap-shadow">
-              <h2>Business</h2>
-              <p class="probootstrap-price"><strong>$69.99</strong></p>
-              <p class="probootstrap-note">This is a monthly recurring payment.</p>
-              <ul class="probootstrap-list text-left mb50">
-                <li class="probootstrap-check">Pointing has no control</li>
-                <li class="probootstrap-check">A small river named Duden flows</li>
-                <li class="probootstrap-check">Roasted parts of sentences fly into your mouth</li>
-              </ul>
-              <p><a href="#" class="btn btn-primary">Get Started</a></p>
+              <h2>Татуаж бровей</h2>
+              <p class="probootstrap-price"><strong>1300 грн</strong></p>
+              <p><a href="tel:+380994457287" class="btn btn-primary">Записаться</a></p>
             </div>
           </div>
           <div class="col-md-4">
             <div class="probootstrap-pricing">
-              <h2>Premium</h2>
-              <p class="probootstrap-price"><strong>$224.99</strong></p>
-              <p class="probootstrap-note">This is a monthly recurring payment.</p>
-              <ul class="probootstrap-list text-left mb50">
-                <li class="probootstrap-check">Pointing has no control</li>
-                <li class="probootstrap-check">A small river named Duden flows</li>
-                <li class="probootstrap-check">Roasted parts of sentences fly into your mouth</li>
-              </ul>
-              <p><a href="#" class="btn btn-black">Get Started</a></p>
+              <h2>Татуаж век</h2>
+              <p class="probootstrap-price"><strong>1200 грн</strong></p>
+              <p><a href="tel:+380994457287" class="btn btn-outline">Записаться</a></p>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="probootstrap-pricing">
+              <h2>Наращивание волос</h2>
+              <p class="probootstrap-price"><strong>1600 грн</strong></p>
+              <p><a href="tel:+380994457287" class="btn btn-outline">Записаться</a></p>
+            </div>
+          </div>
+          <div class="clearfix visible-sm-block"></div>
+          <div class="col-md-4">
+            <div class="probootstrap-pricing">
+              <h2>Наращивание ресниц</h2>
+              <p class="probootstrap-price"><strong>1500 грн</strong></p>
+              <p><a href="tel:+380994457287" class="btn btn-outline">Записаться</a></p>
             </div>
           </div>
         </div>
@@ -198,111 +187,49 @@
       <div class="container">
         <div class="row text-center mb100">
           <div class="col-md-8 col-md-offset-2 probootstrap-section-heading">
-            <h2 class="mb30 text-black probootstrap-heading">That’s why 100,000+ Love Frame</h2>
-            <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+            <h2 class="mb30 text-black probootstrap-heading">Почему нас выбирают наши клиенты</h2>
           </div>
         </div>
         <!-- END row -->
         <div class="row">
           <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="probootstrap-testimonial">
-              <p><img src="img/person_1.jpg" class="img-responsive img-circle probootstrap-author-photo" alt="Free Template by uicookies.com"></p>
-              <p class="mb10 probootstrap-rate">
-                <i class="icon-star"></i>
-                <i class="icon-star"></i>
-                <i class="icon-star"></i>
-                <i class="icon-star"></i>
-                <i class="icon-star"></i>
-              </p>
+              <p><img src="img/placeholder_1.png" class="img-responsive img-circle probootstrap-author-photo" alt="Client photo"></p>
               <blockquote>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+                <p>Девчонки! Рекомендую мастера по татуажу!!! Делала татуаж губ и бровей 3 года назад, качество СУПЕР! Цвет не изменился! У Леси душевная атмосфера и золотые руки! Просто в восторге. Спешите не пожалеете!!!</p>
               </blockquote>
-              <p class="mb0">&mdash; Garry Alexander</p>
+              <p class="mb0">&mdash; Алина</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="probootstrap-testimonial">
-              <p><img src="img/person_2.jpg" class="img-responsive img-circle probootstrap-author-photo" alt="Free Template by uicookies.com"></p>
-              <p class="mb10 probootstrap-rate">
-                <i class="icon-star"></i>
-                <i class="icon-star"></i>
-                <i class="icon-star"></i>
-                <i class="icon-star"></i>
-                <i class="icon-star"></i>
-              </p>
+              <p><img src="img/placeholder_1.png" class="img-responsive img-circle probootstrap-author-photo" alt="Client photo"></p>
               <blockquote>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+                <p>Девчонки! Рекомендую мастера по татуажу!!! Делала татуаж губ и бровей 3 года назад, качество СУПЕР! Цвет не изменился! У Леси душевная атмосфера и золотые руки! Просто в восторге. Спешите не пожалеете!!!</p>
               </blockquote>
-              <p class="mb0">&mdash; James Robertson</p>
+              <p class="mb0">&mdash; Алина</p>
             </div>
           </div>
           <div class="clearfix visible-sm-block"></div>
           <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="probootstrap-testimonial">
-              <p><img src="img/person_3.jpg" class="img-responsive img-circle probootstrap-author-photo" alt="Free Template by uicookies.com"></p>
-              <p class="mb10 probootstrap-rate">
-                <i class="icon-star"></i>
-                <i class="icon-star"></i>
-                <i class="icon-star"></i>
-                <i class="icon-star"></i>
-                <i class="icon-star"></i>
-              </p>
+              <p><img src="img/placeholder_1.png" class="img-responsive img-circle probootstrap-author-photo" alt="Client photo"></p>
               <blockquote>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
+                <p>Девчонки! Рекомендую мастера по татуажу!!! Делала татуаж губ и бровей 3 года назад, качество СУПЕР! Цвет не изменился! У Леси душевная атмосфера и золотые руки! Просто в восторге. Спешите не пожалеете!!!</p>
               </blockquote>
-              <p class="mb0">&mdash; Ben Goodrich</p>
+              <p class="mb0">&mdash; Алина</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="probootstrap-testimonial">
-              <p><img src="img/person_4.jpg" class="img-responsive img-circle probootstrap-author-photo" alt="Free Template by uicookies.com"></p>
-              <p class="mb10 probootstrap-rate">
-                <i class="icon-star"></i>
-                <i class="icon-star"></i>
-                <i class="icon-star"></i>
-                <i class="icon-star"></i>
-                <i class="icon-star-outlined"></i>
-              </p>
+              <p><img src="img/placeholder_1.png" class="img-responsive img-circle probootstrap-author-photo" alt="Client photo"></p>
               <blockquote>
-                <p>And if she hasn’t been rewritten, then they are still using her.</p>
+                <p>Девчонки! Рекомендую мастера по татуажу!!! Делала татуаж губ и бровей 3 года назад, качество СУПЕР! Цвет не изменился! У Леси душевная атмосфера и золотые руки! Просто в восторге. Спешите не пожалеете!!!</p>
               </blockquote>
-              <p class="mb0">&mdash; Kip Hugh</p>
+              <p class="mb0">&mdash; Алина</p>
             </div>
           </div>
           <div class="clearfix visible-sm-block"></div>
-          <div class="col-md-4 col-sm-6 col-xs-12">
-            <div class="probootstrap-testimonial">
-              <p><img src="img/person_2.jpg" class="img-responsive img-circle probootstrap-author-photo" alt="Free Template by uicookies.com"></p>
-              <p class="mb10 probootstrap-rate">
-                <i class="icon-star"></i>
-                <i class="icon-star"></i>
-                <i class="icon-star"></i>
-                <i class="icon-star"></i>
-                <i class="icon-star"></i>
-              </p>
-              <blockquote>
-                <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-              </blockquote>
-              <p class="mb0">&mdash; James Robertson</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 col-xs-12">
-            <div class="probootstrap-testimonial">
-              <p><img src="img/person_3.jpg" class="img-responsive img-circle probootstrap-author-photo" alt="Free Template by uicookies.com"></p>
-              <p class="mb10 probootstrap-rate">
-                <i class="icon-star"></i>
-                <i class="icon-star"></i>
-                <i class="icon-star"></i>
-                <i class="icon-star"></i>
-                <i class="icon-star"></i>
-              </p>
-              <blockquote>
-                <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
-              </blockquote>
-              <p class="mb0">&mdash; Ben Goodrich</p>
-            </div>
-          </div>
-
         </div>
       </div>
     </section>
@@ -313,43 +240,39 @@
         <div class="row">
           <div class="col-md-6">
             <form action="" class="probootstrap-form">
-              <h2 class="text-black mt0">Get In Touch</h2>
+              <h2 class="text-black mt0">Связаться с нами (не работает)</h2>
               <div class="form-group">
-                <input type="text" class="form-control" placeholder="Your Name">
+                <input type="text" class="form-control" placeholder="Имя">
               </div>
               <div class="form-group">
-                <input type="email" class="form-control" placeholder="Your Email">
+                <input type="email" class="form-control" placeholder="Телефон">
               </div>
               <div class="form-group">
-                <input type="email" class="form-control" placeholder="Your Phone">
+                <textarea class="form-control"cols="30" rows="10" placeholder="Сообщение"></textarea>
               </div>
               <div class="form-group">
-                <textarea class="form-control"cols="30" rows="10" placeholder="Write a Message"></textarea>
-              </div>
-              <div class="form-group">
-                <input type="submit" class="btn btn-primary" value="Sebd Message">
+                <input type="submit" class="btn btn-primary" value="Написать">
               </div>
             </form>
           </div>
           <div class="col-md-3 col-md-push-1">
             <ul class="probootstrap-contact-details">
               <li>
-                <span class="text-uppercase">Email</span>
-                probootstrap@gmail.com
+                <span class="text-uppercase">Телефон</span>
+                +380 99 445 72 87
               </li>
               <li>
-                <span class="text-uppercase">Phone</span>
-                +30 976 1382 9921
+                <span class="text-uppercase">Viber</span>
+                +380 99 445 72 87
               </li>
               <li>
-                <span class="text-uppercase">Fax</span>
-                +30 976 1382 9922
+                <span class="text-uppercase">Whatsapp</span>
+                +380 99 445 72 87
               </li>
               <li>
-                <span class="text-uppercase">Address</span>
-                San Francisco, CA <br>
-                4th Floor8 Lower  <br>
-                San Francisco street, M1 50F
+                <span class="text-uppercase">Адрес</span>
+                г. Сумы<br>
+                ул. Интернациональная,15
               </li>
             </ul>
           </div>
@@ -367,7 +290,7 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-            &copy; 2017 <a href="https://uicookies.com/">uiCookies:Frame</a>. All Rights Reserved. <br> Designed &amp; Developed by <a href="https://uicookies.com">uicookies.com</a> <br> Demo Images by <a href="https://unsplash.com">Unsplash</a>
+            &copy; 2017 <a href="https://uicookies.com/">uiCookies:Frame</a>. All Rights Reserved. <br> Designed &amp; Developed by <a href="https://uicookies.com">uicookies.com</a>
           </div>
         </div>
       </div>
