--- a/index.html
+++ b/index.html
@@ -279,7 +279,10 @@
         </div>
       </div>
     </section>
-    
+
+    <section class="probootstrap-section map">
+      <iframe src="https://www.openstreetmap.org/export/embed.html?bbox=34.82632219791413%2C50.91110732391669%2C34.83176708221436%2C50.91404315588005&amp;layer=mapnik&amp;marker=50.91257526304703%2C34.829047322273254" style="border: 1px solid black"></iframe>
+    </section>
 
     <footer class="probootstrap-footer">
       <div class="container text-center">
