Build system refactored. Added /src folder, resulting files now saved in /build folder, gulp without parameters starts server and reloads when changes are saved, added gulp clean task.

--- a/src/index.html
+++ b/src/index.html
@@ -272,7 +272,7 @@
               <li>
                 <span class="text-uppercase">Адрес</span>
                 г. Сумы<br>
-                ул. Интернациональная,15
+                ул. Интернационалистов,15
               </li>
             </ul>
           </div>
@@ -302,7 +302,7 @@
     
 
     <script src="js/scripts.min.js"></script>
-    <script src="js/custom.js"></script>
+    <script src="js/custom.min.js"></script>
 
   </body>
 </html>
