added images, feedback text

--- a/index.html
+++ b/index.html
@@ -205,9 +205,9 @@
             <div class="probootstrap-testimonial">
               <p><img src="img/placeholder_1.png" class="img-responsive img-circle probootstrap-author-photo" alt="Client photo"></p>
               <blockquote>
-                <p>Девчонки! Рекомендую мастера по татуажу!!! Делала татуаж губ и бровей 3 года назад, качество СУПЕР! Цвет не изменился! У Леси душевная атмосфера и золотые руки! Просто в восторге. Спешите не пожалеете!!!</p>
+                <p>По рекомендации знакомых попала на приём к Лесе. Не пожалела ни минутки! Сделала губки и глазки. Все очень профессионально и качественно! А главное-атмосфера! Редко сталкиваешься с такой доброжелательность и обаянием! Думаю, это мой не последний визит к мастеру!</p>
               </blockquote>
-              <p class="mb0">&mdash; Алина</p>
+              <p class="mb0">&mdash; Настя</p>
             </div>
           </div>
           <div class="clearfix visible-sm-block"></div>
@@ -215,18 +215,9 @@
             <div class="probootstrap-testimonial">
               <p><img src="img/placeholder_1.png" class="img-responsive img-circle probootstrap-author-photo" alt="Client photo"></p>
               <blockquote>
-                <p>Девчонки! Рекомендую мастера по татуажу!!! Делала татуаж губ и бровей 3 года назад, качество СУПЕР! Цвет не изменился! У Леси душевная атмосфера и золотые руки! Просто в восторге. Спешите не пожалеете!!!</p>
+                <p>Уважаемые девочки, делюсь отзывом о работе мастера Алеси, у которой с радостью обслуживаюсь и я, и мои родные, и друзья, и коллеги. Делала татуж бровей уже несколько раз и себе, и маме. Одного раза + 1 коррекция хватило мне приблизительно на 2 года. Всё получилось очень естественно и аккуратно. Мастер очень ответственно и с понимаем относится к своей работе и желаниям клиенток, так что очень советую, Вы будете довольны.</p>
               </blockquote>
-              <p class="mb0">&mdash; Алина</p>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 col-xs-12">
-            <div class="probootstrap-testimonial">
-              <p><img src="img/placeholder_1.png" class="img-responsive img-circle probootstrap-author-photo" alt="Client photo"></p>
-              <blockquote>
-                <p>Девчонки! Рекомендую мастера по татуажу!!! Делала татуаж губ и бровей 3 года назад, качество СУПЕР! Цвет не изменился! У Леси душевная атмосфера и золотые руки! Просто в восторге. Спешите не пожалеете!!!</p>
-              </blockquote>
-              <p class="mb0">&mdash; Алина</p>
+              <p class="mb0">&mdash; Лена</p>
             </div>
           </div>
           <div class="clearfix visible-sm-block"></div>
@@ -240,7 +231,7 @@
         <div class="row">
           <div class="col-md-6">
             <form action="" class="probootstrap-form">
-              <h2 class="text-black mt0">Связаться с нами (не работает)</h2>
+              <h2 class="text-black mt0">Связаться с нами (заменить на фотку me.jpg)</h2>
               <div class="form-group">
                 <input type="text" class="form-control" placeholder="Имя">
               </div>
@@ -272,7 +263,7 @@
               <li>
                 <span class="text-uppercase">Адрес</span>
                 г. Сумы<br>
-                ул. Интернациональная,15
+                ул. Интернационалистов,15
               </li>
             </ul>
           </div>
