Restored some files, fixes.

--- a/src/index.html
+++ b/src/index.html
@@ -228,10 +228,10 @@
     <section class="probootstrap-section probootstrap-bg-light" data-section="contact">
       <div class="container">
         <div class="row">
-          <div class="col-md-6 col-sm-6">
+          <div class="col-md-6 col-sm-6 probootstrap-animate">
             <img src="img/me.jpg" class="img-responsive center-block">
           </div>
-          <div class="col-md-3 col-sm-3 col-md-push-1">
+          <div class="col-md-3 col-sm-3 col-xs-push-1">
             <ul class="probootstrap-contact-details">
               <li>
                 <span class="text-uppercase">Телефон</span>
