Contact details optimized for mobile view.

--- a/src/index.html
+++ b/src/index.html
@@ -231,7 +231,7 @@
           <div class="col-md-6 col-sm-6 probootstrap-animate">
             <img src="img/me.jpg" class="img-responsive center-block">
           </div>
-          <div class="col-md-3 col-sm-3 col-xs-push-1">
+          <div class="col-md-3 col-sm-3 col-sm-push-1">
             <ul class="probootstrap-contact-details">
               <li>
                 <span class="text-uppercase">Телефон</span>
