--- a/src/index.html
+++ b/src/index.html
@@ -197,7 +197,7 @@
               <blockquote>
                 <p>Отличная работа, девочки! 5 лет назад сделала татуаж бровей, результатом очень довольна. Цвет не изменился, очень удобно и хорошо. Мастер очень внимательная, вежливая, аккуратная, доброжелательная, пунктуальная. Рекомендую и буду обращаться вновь. Кто ещё не сделал, спешите, мастер - класс!!!</p>
               </blockquote>
-              <p class="mb0">&mdash; Алина</p>
+              <p class="mb0">&mdash; Оксана</p>
             </div>
           </div>
           <div class="col-md-4 col-sm-6 col-xs-12">
